[tool.poetry]
name = "deza-bot"
version = "0.1.0"
description = ""
authors = ["sakkke <84666033+sakkke@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-cord = "^2.5.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
